--- a/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
+++ b/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:31:55 GMT
+    - Mon, 19 Jun 2017 16:08:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7yjLDSiBGoJ6P9UWgIhs42; path=/
+    - PHPSESSID=XI4NkKhcAw1%2C5lLw1e1NO3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:31:55 GMT
+recorded_at: Mon, 19 Jun 2017 16:08:04 GMT
