--- a/www.nass.gov.ng/878c44011fe1e758f39e66198b03c938da1c2f3a.yml
+++ b/www.nass.gov.ng/878c44011fe1e758f39e66198b03c938da1c2f3a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:37:42 GMT
+    - Mon, 19 Jun 2017 16:14:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8SMiffDr57h%2CaBCLiCAHH3; path=/
+    - PHPSESSID=vs4dTNZy1ziKFgzSOCGDz3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:37:42 GMT
+recorded_at: Mon, 19 Jun 2017 16:14:41 GMT
