--- a/www.nass.gov.ng/2c56a52d8333a6d2f4a6fb4dbe324f4fc0515dbf.yml
+++ b/www.nass.gov.ng/2c56a52d8333a6d2f4a6fb4dbe324f4fc0515dbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:41:01 GMT
+    - Mon, 19 Jun 2017 16:17:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Sj78TxERZtePL4oH4oLL%2C2; path=/
+    - PHPSESSID=IncJwN-eVBNkbzSwdGD880; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:41:01 GMT
+recorded_at: Mon, 19 Jun 2017 16:17:19 GMT
