--- a/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
+++ b/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:48:57 GMT
+    - Mon, 19 Jun 2017 16:23:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IZi5tPnfuaOCyLSDeSPX92; path=/
+    - PHPSESSID=Fm00e93tpbw%2C9izdxY8IM1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:48:57 GMT
+recorded_at: Mon, 19 Jun 2017 16:23:32 GMT
