--- a/www.nass.gov.ng/d872f8c59b68f74472849cbddab2eaeab7fcfe4f.yml
+++ b/www.nass.gov.ng/d872f8c59b68f74472849cbddab2eaeab7fcfe4f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:51:12 GMT
+    - Mon, 19 Jun 2017 16:24:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mN2aUy5s4fw2ei8pPDBIr1; path=/
+    - PHPSESSID=xdEK%2CzlhCzpUMwENV9zfx2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:51:12 GMT
+recorded_at: Mon, 19 Jun 2017 16:24:49 GMT
