--- a/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
+++ b/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:54:48 GMT
+    - Mon, 19 Jun 2017 16:30:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aVnJG5ko36hPInQL4CoJM0; path=/
+    - PHPSESSID=KeGnR4NZBJ9%2C6B4yJJhwP2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:54:48 GMT
+recorded_at: Mon, 19 Jun 2017 16:30:13 GMT
