--- a/www.nass.gov.ng/c10061d882169e56af3a1363d4ec62097f884d6f.yml
+++ b/www.nass.gov.ng/c10061d882169e56af3a1363d4ec62097f884d6f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 20:58:45 GMT
+    - Mon, 19 Jun 2017 16:35:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A-5Wl8N6g-a4SqdPjFjtt0; path=/
+    - PHPSESSID=1wbaxE%2COxBcn1wk7nufRt2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 20:58:45 GMT
+recorded_at: Mon, 19 Jun 2017 16:35:00 GMT
