--- a/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
+++ b/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 11:50:18 GMT
+    - Tue, 20 Jun 2017 07:57:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kkANcSKlhaDHfB8hEm6V13; path=/
+    - PHPSESSID=R%2CDcEIZ5nH-VR8IBmNuhn2; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 11:50:19 GMT
+recorded_at: Tue, 20 Jun 2017 07:57:05 GMT
