--- a/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
+++ b/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 11:59:58 GMT
+    - Tue, 20 Jun 2017 08:04:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tdsSQ-wWE7bjIabqyRZiz2; path=/
+    - PHPSESSID=xFP%2CWnhrLEl4NOXyX4ChT1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 11:59:58 GMT
+recorded_at: Tue, 20 Jun 2017 08:04:40 GMT
