--- a/www.nass.gov.ng/297853327be3044a6e9206c07b1c16a5e232e42c.yml
+++ b/www.nass.gov.ng/297853327be3044a6e9206c07b1c16a5e232e42c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:07:01 GMT
+    - Tue, 20 Jun 2017 08:12:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gfHfdyfX5%2CRQNlfAL0-3Q3; path=/
+    - PHPSESSID=p4JH-TXirlYCRA4IZ9UkO0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:07:01 GMT
+recorded_at: Tue, 20 Jun 2017 08:12:02 GMT
