--- a/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
+++ b/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:12:18 GMT
+    - Tue, 20 Jun 2017 08:17:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=d05pDpXwNjai2ImJJs37I2; path=/
+    - PHPSESSID=oLHn%2CwQYZW7qpF4W3-IZI2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:12:18 GMT
+recorded_at: Tue, 20 Jun 2017 08:17:00 GMT
