--- a/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
+++ b/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:13:06 GMT
+    - Tue, 20 Jun 2017 08:17:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5V2P23htr8o3aU7AjXJBD0; path=/
+    - PHPSESSID=9pl693xpW8dbUM-%2C3OMrh3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:13:07 GMT
+recorded_at: Tue, 20 Jun 2017 08:17:23 GMT
