--- a/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
+++ b/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:13:37 GMT
+    - Tue, 20 Jun 2017 08:17:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FfBig8QrQuw9Ca%2CYQHPez2; path=/
+    - PHPSESSID=XTqv6t9BXrvcaX8Pk6sBE0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:13:37 GMT
+recorded_at: Tue, 20 Jun 2017 08:17:56 GMT
