--- a/www.nass.gov.ng/923100a57f94ffb10e4761e924c17dfae0d6d00a.yml
+++ b/www.nass.gov.ng/923100a57f94ffb10e4761e924c17dfae0d6d00a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:16:47 GMT
+    - Tue, 20 Jun 2017 08:20:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1g8Di-jsy76TWG%2CLBuysE2; path=/
+    - PHPSESSID=GTAC00%2CYArGqG9DybrS6S1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:16:47 GMT
+recorded_at: Tue, 20 Jun 2017 08:20:28 GMT
