--- a/www.nass.gov.ng/926525bb7d4257757c744bb7d6b97f6aac902828.yml
+++ b/www.nass.gov.ng/926525bb7d4257757c744bb7d6b97f6aac902828.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:17:50 GMT
+    - Tue, 20 Jun 2017 08:21:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lbvAuplLR%2C-KLKy7JScI52; path=/
+    - PHPSESSID=UGSkRyQ%2C60nD12-nVNz-11; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:17:50 GMT
+recorded_at: Tue, 20 Jun 2017 08:21:19 GMT
