--- a/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
+++ b/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:19:42 GMT
+    - Tue, 20 Jun 2017 08:22:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RW5ogLYLQA1b1lF%2CYMaqi1; path=/
+    - PHPSESSID=YcSY3PEh6V-qHk7Dt7bmG0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:19:42 GMT
+recorded_at: Tue, 20 Jun 2017 08:22:02 GMT
