--- a/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
+++ b/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:24:54 GMT
+    - Tue, 20 Jun 2017 08:28:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HIqdhOmso5DEyVlme%2C%2C6l1; path=/
+    - PHPSESSID=bvsvNYwqdVHQ2TZimLTdx3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:24:55 GMT
+recorded_at: Tue, 20 Jun 2017 08:28:03 GMT
