--- a/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
+++ b/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:25:18 GMT
+    - Tue, 20 Jun 2017 08:28:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ez9nt5P8fS%2CMlwvqHNTPw3; path=/
+    - PHPSESSID=JvGqPg6RlyBHJC7GVPuoF0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:25:18 GMT
+recorded_at: Tue, 20 Jun 2017 08:28:24 GMT
