--- a/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
+++ b/www.nass.gov.ng/a161c8b9c15f84fdc60cd163cbea6adcf7d58dba.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:26:03 GMT
+    - Tue, 20 Jun 2017 08:29:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Mf4BpZlf95HzzQ6JEYo%2CG0; path=/
+    - PHPSESSID=du%2CgWYnY9eKShHtBUp9qO3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:26:03 GMT
+recorded_at: Tue, 20 Jun 2017 08:29:17 GMT
