--- a/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
+++ b/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:30:45 GMT
+    - Tue, 20 Jun 2017 08:33:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dsYzaChzR-ifimDO30M3R0; path=/
+    - PHPSESSID=B%2COmGwmFCBm80i2mOiUMS0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:30:45 GMT
+recorded_at: Tue, 20 Jun 2017 08:33:46 GMT
