--- a/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
+++ b/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:32:03 GMT
+    - Tue, 20 Jun 2017 08:36:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rDNoqQnXg%2CKqyLGj2W%2CCh3; path=/
+    - PHPSESSID=bc3GkAf0bsO7VDvdUYZUp1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:32:03 GMT
+recorded_at: Tue, 20 Jun 2017 08:36:34 GMT
