--- a/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
+++ b/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:36:49 GMT
+    - Tue, 20 Jun 2017 08:39:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Xi8QESSrLhpm7pjVpjDgL2; path=/
+    - PHPSESSID=k0tgLnZqWcwtgL7dj56%2Cm2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:36:49 GMT
+recorded_at: Tue, 20 Jun 2017 08:39:52 GMT
