--- a/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
+++ b/www.nass.gov.ng/69b1a54aa638ff138e9777d0b639c88d194c578a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:40:09 GMT
+    - Tue, 20 Jun 2017 08:42:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BNatpNtGdfLD1UTFVrmVD2; path=/
+    - PHPSESSID=2evQmsxWhZbrgYBvH8R%2CA3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:40:09 GMT
+recorded_at: Tue, 20 Jun 2017 08:42:14 GMT
