--- a/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
+++ b/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:00:48 GMT
+    - Tue, 20 Jun 2017 11:08:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kns4S5LW2C%2CSwoicRsAak0; path=/
+    - PHPSESSID=1bQzKksy52Lrwjdilkevt2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:00:48 GMT
+recorded_at: Tue, 20 Jun 2017 11:08:33 GMT
