--- a/www.nass.gov.ng/cf0ce432b02edccc8fd045b91af6eaa149503806.yml
+++ b/www.nass.gov.ng/cf0ce432b02edccc8fd045b91af6eaa149503806.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:01:17 GMT
+    - Tue, 20 Jun 2017 11:08:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dB2kgyfrmpyN9tGgFDozd2; path=/
+    - PHPSESSID=Sa%2CxgCQaiiR4SrGjP5nUh3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:01:18 GMT
+recorded_at: Tue, 20 Jun 2017 11:08:55 GMT
