--- a/www.nass.gov.ng/735bf46098ada07ab0f2c0e11f8aeaff886cd56c.yml
+++ b/www.nass.gov.ng/735bf46098ada07ab0f2c0e11f8aeaff886cd56c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:02:20 GMT
+    - Tue, 20 Jun 2017 11:10:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q4-WlHRn%2CsaapTSoMlppE3; path=/
+    - PHPSESSID=yoKot6tBTkWKrHKxmXMUI3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:02:20 GMT
+recorded_at: Tue, 20 Jun 2017 11:10:14 GMT
