--- a/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
+++ b/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:04:02 GMT
+    - Tue, 20 Jun 2017 11:11:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tTQ02WBVGbJ-Lls4mjz%2Cr1; path=/
+    - PHPSESSID=24gz6rCTBxMSe%2CXbhXk7B3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:04:02 GMT
+recorded_at: Tue, 20 Jun 2017 11:11:06 GMT
