--- a/www.nass.gov.ng/4b4cc7333af97a61bb0dd673826033ec6a85253e.yml
+++ b/www.nass.gov.ng/4b4cc7333af97a61bb0dd673826033ec6a85253e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:14:06 GMT
+    - Tue, 20 Jun 2017 11:19:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Xk1qBvIqBSh3FGODe9r5%2C3; path=/
+    - PHPSESSID=ra0On29UmtJnbAcY53wl61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:14:06 GMT
+recorded_at: Tue, 20 Jun 2017 11:19:41 GMT
