--- a/www.nass.gov.ng/47b32632dbabdf2e3baebbc473344c3a65b4906d.yml
+++ b/www.nass.gov.ng/47b32632dbabdf2e3baebbc473344c3a65b4906d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:18:14 GMT
+    - Tue, 20 Jun 2017 11:25:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BhiOoy7HGVcGrdH5fugkl1; path=/
+    - PHPSESSID=FeCa%2Cdkrs3wAkGwsDDwI73; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:18:14 GMT
+recorded_at: Tue, 20 Jun 2017 11:25:10 GMT
