--- a/www.nass.gov.ng/c14377e7be6646d45d849e8ba9166b3813d1c555.yml
+++ b/www.nass.gov.ng/c14377e7be6646d45d849e8ba9166b3813d1c555.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:19:17 GMT
+    - Tue, 20 Jun 2017 11:25:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BLPP%2CYPQAp9R9-OUw7dJD0; path=/
+    - PHPSESSID=4PSpXa2jeTw9GCc57bjd01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:19:17 GMT
+recorded_at: Tue, 20 Jun 2017 11:25:33 GMT
