--- a/www.nass.gov.ng/730dc0a4d841b70c938ae692562efe4079c7aeb7.yml
+++ b/www.nass.gov.ng/730dc0a4d841b70c938ae692562efe4079c7aeb7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:24:35 GMT
+    - Tue, 20 Jun 2017 11:30:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=S1K5IOu8LVsQ48lJT1Lg51; path=/
+    - PHPSESSID=MHfD%2CcmlRZlW3KtRcofNG1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:24:35 GMT
+recorded_at: Tue, 20 Jun 2017 11:30:19 GMT
