--- a/www.nass.gov.ng/f0a31908cfe3a5053d060b5497f08f44933eb2c6.yml
+++ b/www.nass.gov.ng/f0a31908cfe3a5053d060b5497f08f44933eb2c6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:25:02 GMT
+    - Tue, 20 Jun 2017 11:31:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Bjq39hITg0ig6T6B0kVdx2; path=/
+    - PHPSESSID=2PjXGG0-cDJ%2CDfuUBoIrM1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:25:02 GMT
+recorded_at: Tue, 20 Jun 2017 11:31:08 GMT
