--- a/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
+++ b/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:25:21 GMT
+    - Tue, 20 Jun 2017 11:31:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Hpj7zO0sdmdj7yYWcs40p2; path=/
+    - PHPSESSID=ZLPlzf%2Cl5NmJMugTAI0bB2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:25:21 GMT
+recorded_at: Tue, 20 Jun 2017 11:31:38 GMT
