--- a/www.nass.gov.ng/a3039e7135952a1b51c43426e6c82a9064c4bed3.yml
+++ b/www.nass.gov.ng/a3039e7135952a1b51c43426e6c82a9064c4bed3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:28:22 GMT
+    - Tue, 20 Jun 2017 11:33:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=g2vo1DJj5ZSjw3a3KV%2CDg3; path=/
+    - PHPSESSID=KHqinyjPJztuxt2uxcpyi2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:28:22 GMT
+recorded_at: Tue, 20 Jun 2017 11:33:42 GMT
