--- a/www.nass.gov.ng/61531b370eb907ab683349aaaca322188d3f87b1.yml
+++ b/www.nass.gov.ng/61531b370eb907ab683349aaaca322188d3f87b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:30:53 GMT
+    - Tue, 20 Jun 2017 11:35:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=scjuFa2kaYI6cSdaVZYNS0; path=/
+    - PHPSESSID=4Qe%2CQL76XgnLia0z0U3aJ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:30:53 GMT
+recorded_at: Tue, 20 Jun 2017 11:35:33 GMT
