--- a/www.nass.gov.ng/5dfc54f787daf8414997d7390381dcd678626f3f.yml
+++ b/www.nass.gov.ng/5dfc54f787daf8414997d7390381dcd678626f3f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:33:45 GMT
+    - Tue, 20 Jun 2017 11:37:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=T8QBJUM%2CRzybrjayfauf93; path=/
+    - PHPSESSID=GH6Lkql-nZYHmO7SboKyt0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:33:45 GMT
+recorded_at: Tue, 20 Jun 2017 11:37:56 GMT
